[#95] feat: 캐릭터 생성 및 업데이트 로직