@@ -1,18 +1,19 @@
 package org.nexters.jaknaesocore.domain.survey.model;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 
 @RequiredArgsConstructor
 public class KeywordScores {
 
-  private final List<Survey> surveys;
+  @Getter private final List<KeywordScore> values;
 
-  public List<KeywordScore> getKeywordScores() {
-    return surveys.stream()
-        .flatMap(survey -> survey.getOptions().stream())
-        .flatMap(option -> option.getScores().stream())
-        .collect(Collectors.toList());
+  public static KeywordScores of(List<Survey> values) {
+    return new KeywordScores(
+        values.stream()
+            .flatMap(survey -> survey.getOptions().stream())
+            .flatMap(option -> option.getScores().stream())
+            .toList());
   }
 }
